# nerfdome

./: run.ino  run.py
arduino/: run.ino
control/: bt.py  face_test.py
pico/: CMakeLists.txt  bluetooth_spp.c  bluetooth_spp.h  bt_main.c  main.c  serial.c  serial.h  servo.c  servo.h  spp_streamer.c
pico/include/: protocol.h
pico/include/btstack/: spp.h
pico/src/: main.c  protocol.c
pico/src/btstack/: spp.c
ports/: bt.py  face.py  read.py  status.py  talk.py
